RESOLVED FIXED115530
REGRESSION (149389) Main resources converted to downloads are immediately cancelled
https://bugs.webkit.org/show_bug.cgi?id=115530
Summary REGRESSION (149389) Main resources converted to downloads are immediately can...
Brady Eidson
Reported 2013-05-02 14:57:44 PDT
REGRESSION (149389) Main resources converted to downloads are immediately cancelled The NetworkResourceLoader needs to know its handle should not be cancelled. In radar as <rdar://problem/13795795>
Attachments
Brady Eidson
Comment 1 2013-05-02 15:11:55 PDT
I tried a patch that clears m_handle and keeps track of the ref()/deref() self state via a new bool, but because of the threading involved that ran into bizarre problems we don't have time to explore right now. Prepping a patch that is probably a little worse but definitely works.
Brady Eidson
Comment 2 2013-05-02 15:21:09 PDT
Alexey reviewed this patch over my shoulder. Landing soon.
Brady Eidson
Comment 3 2013-05-02 15:22:42 PDT
Note You need to log in before you can comment on or make changes to this bug.