REGRESSION (149389) Main resources converted to downloads are immediately cancelled. <rdar://problem/13795795> and https://bugs.webkit.org/show_bug.cgi?id=115530

Reviewed by Alexey Proskuryakov.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::convertMainResourceLoadToDownload): Call didConvertHandleToDownload
  on the NetworkResourceLoader.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::NetworkResourceLoader):
(WebKit::NetworkResourceLoader::didConvertHandleToDownload): Set m_handleConvertedToDownload to true.
(WebKit::NetworkResourceLoader::abort): Only cancel the handle if m_handleConvertedToDownload is false.
* NetworkProcess/NetworkResourceLoader.h:

Canonical link: https://commits.webkit.org/133970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149499 268f45cc-cd09-0410-ab3c-d52691b4dbfc